--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ isHome: true
   <ul>
     <li><a href="https://threejs.org">three.js &gt;= 0.97</a> + examples files</li>
     <li><a href="https://olado.github.io/doT">doT.js</a></li>
-    <li><a href="https://github.com/mistic100/uEvent">uEvent</a></li>
+    <li><a href="https://github.com/mistic100/uEvent/tree/1.0.0">uEvent 1</a> (version 2 is not supported)</li>
     <li><a href="https://github.com/taylorhakes/promise-polyfill">promise-polyfill</a> for IE compatibility</li>
   </ul>
 
